<:wrench:> Fixtures on alignment parameters for the activities section of the desktop version

--- a/css/style_reservia.css
+++ b/css/style_reservia.css
@@ -328,7 +328,7 @@ h2{
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 1.5em 0;
+  margin: 1.5em 0em 2em 0em;
 }
 
 #activities h2{
@@ -337,74 +337,78 @@ h2{
 
 #block-activities{
   display: grid;
-  grid-gap: 1em;
+  grid-gap: 1.5em;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, auto);
+  grid-template-rows: repeat(2, 210px);
   grid-template-areas: "big1 medium1 big2 small2"
                        "big1 small1 big2 medium2";
+  justify-items: stretch;
 }
 
 .big1{
   grid-area: big1;
-  height: 450px;
+  height: 100%;
 }
 
 .medium1{
   grid-area: medium1;
-  height: 210px;
+  height: 240px;
 }
 
 .small1{
   grid-area: small1;
-  height: 200px
+  height: 170px;
+  align-self: end;
 }
 
 .big2{
   grid-area: big2;
-  height: 450px;
+  height: 100%;
 }
 
 .small2{
   grid-area: small2;
-  height: 200px
+  height: 170px;
 }
 
 .medium2{
   grid-area: medium2;
-  height: 210px;
+  height: 240px;
+  align-self: end;
 }
 
 .activity-card a{
-  text-decoration: none;
   color: #000;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
 
 .activity-card{
   background-color: #FFF;
   border-radius: 1em;
   box-shadow: 0em 0em 0.15em #ACACAC;
-  width: 270px;
+  width: 100%;
 }
 
 .pic-activity{
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;
+  height: 100%;
   object-fit: cover;
   width: 100%;
 }
 
 .big{
-  height: 390px;
+  height: 88%;
 }
 
 .medium{
-  height: 150px;
+  height: 180px;
 }
 
 .small{
-  height: 140px;
+  height: 110px;
 }
 
 .activity-card a span{
